# U-chat-android

src/: main.js
src-tauri/: Cargo.toml  login_test.rs  tauri.conf.json
src-tauri/src/: auth.rs  chat.html  index.html  main.js  main.rs  models.rs  storage.rs
src-tauri/src/commands/: auth.rs  ws.rs
src-tauri/src/services/: api.rs  mod.rs
u-chat-web/js/: ui.js
