[package]
name = "uchat_android"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tauri-plugin-opener = "2.5.2"

[build-dependencies]
tauri-build = { version = "2" }
