[package]
name = "uchat_android"
version = "0.1.0"
edition = "2021"
default-run = "uchat_android"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
